fix: remove wrong margin

--- a/src/components/MultipleChoice/MultipleChoice.module.scss
+++ b/src/components/MultipleChoice/MultipleChoice.module.scss
@@ -46,7 +46,7 @@ li:hover {
   display: block;
   position: relative;
   padding-left: 35px;
-  margin-bottom: 12px;
+  // margin-bottom: 12px;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
